--- a/style.css
+++ b/style.css
@@ -3,3 +3,13 @@ body {
     background-repeat: repeat;
     background-size: 24px 24px;
 }
+
+h1 {
+    font-family: "Quantico", sans-serif;
+    font-weight: 600;
+    font-size: 40pt;
+    line-height: 65px;
+    color: white;
+    -webkit-text-stroke: 1.5px black;
+    text-shadow: 2px 2px 0 black;
+}
