--- a/style.css
+++ b/style.css
@@ -29,7 +29,12 @@ h1 {
 
 #midsection {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
+#midmidsection {
+    display: flex;
+    align-items: center;
 }
 #square {
     display: grid;
