--- a/style.css
+++ b/style.css
@@ -74,3 +74,16 @@ h1 {
 .v-buttons, .h-buttons {
     gap: 30px;
 }
+
+#util-buttons {
+    display: flex;
+    justify-content: end;
+    gap: 32px;
+    margin: 20px;
+}
+.util-button {
+    width: 45px;
+    height: 45px;
+    background-color: var(--cube-gray);
+    box-shadow: 4px 4px 0 black;
+}
